Fixed the Homepage layout issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -82,3 +82,7 @@
       @apply bg-blue-1 scale-100; 
   }
 }
+
+.sizetext{
+  font-size:large !important;
+}
